# memerist

./: .gitignore  Makefile  README.md  dpkg-build.sh  io.github.vani1_2.memerist.yml  io.github.vani_tty1.memerist.yml  memerist.spec  memerist.spec~  meson.build  meson_options.txt  org.gnome.Memerist.json  project.toml
.copr/: Makefile
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: appimage.yml  flatpak-build.yml
_build/: .gnome-builder-devenv
build-aux/: io.github.vani_tty1.memerist.Devel.yml  io.github.vani_tty1.memerist.yml
build-aux/flatpak/: io.github.vani_tty1.memerist.yml
build-aux/scripts/: install-archlinux.sh
data/: io.github.vani1_2.memerist.metainfo.xml.in  io.github.vani1_2.memeristt.metainfo.xml.in  io.github.vani_tty1.memerist.desktop.in  io.github.vani_tty1.memerist.gschema.xml  io.github.vani_tty1.memerist.metainfo.xml.in  meson.build  org.gnome.Memerist.desktop.in
data/icons/: meson.build
deb-build/: memerist-amd64.deb
po/: POTFILES.in
scripts/: dpkg-build.sh  install-archlinux.sh  install-deb.sh
src/: about.c  about.h  keyboard-shortcuts.c  keyboard-shortcuts.h  main.c  meme-application.c  meme-application.h  meme-canvas.c  meme-canvas.h  meme-core.c  meme-core.h  meme-fileio.c  meme-fileio.h  meme-gpu.c  meme-gpu.h  meme-history.c  meme-history.h  meme-renderer.c  meme-renderer.h  meme-window-private.h  meme-window.blp  meme-window.c  meme-window.h  meme-window.ui  memerist.gresource.xml  meson.build  myapp-application.c  myapp-window.c  myapp-window.ui  myapp.gresource.xml  primary-menu.blp  primary-menu.ui  release.html  shortcuts-dialog.blp  shortcuts-dialog.ui  style.css  theme-switcher.blp
tests/: test_invariant_meme-core.py
